2006-03-14  Titus Brown  <t@issola.caltech.edu>

	* Added list of known problems.

	* Added Web testing programs for Perl & PHP to docs.

2006-03-09  Titus Brown  <t@issola.caltech.edu>

	* Switched mechanize default encodings over to utf-8 (Terry
	  Peppers, many others!)

2006-03-06  Titus Brown  <t@issola.caltech.edu>

	* fixed twill.shell.main() so that -i flag makes interact run
	  even on failure exit.

	* Added setuptools entry_points magic for twill-sh script.

2006-03-05  Titus Brown  <t@issola.caltech.edu>

	* SystemExit problems in the twill shell, fixed.

	* Added 'redirect_output' and 'reset_output'. (Norman Khine)

	* Fixed memory leak in reset_browser(). (Alexander Shvedunov)

	* Increased test coverage overall to 85%.

	* Now test the shell code fairly well.

	* Cleaned up some of the stdout issues with nose.

	* fixed buggishness in shell code.

	* Made sure to close fp in tidy code.

2006-02-28  Titus Brown  <t@issola.caltech.edu>

	* runfile now allows multiple filenames properly.

2006-02-21  Titus Brown  <t@issola.caltech.edu>

	* TwillAssertionError no longer subclasses AssertionError.

	* execute_command now takes a cmdinfo argument so that line number
	  of input can be traced in errors.

2006-02-16  Titus Brown  <t@issola.caltech.edu>

	* Fixed 'run_tidy' >& error on windows.

	* Fixed "file:" URLs for which result.code doesn't exist.

2006-02-09  Titus Brown  <t@issola.caltech.edu>

	* Added 'equiv-refresh' debug option.

2006-02-08  Titus Brown  <t@issola.caltech.edu>

	* 0.8.3 RELEASE

	* fixed minor links parsing bug (seek(0) prior to parsing!)

	* renamed wwwsearch/ to other_packages/.

	* added BeautifulSoup.

2006-02-06  Titus Brown  <t@issola.caltech.edu>

	* 0.8.2 RELEASE.

	* Documented config options.

	* Added in parse_errors stuff: config parse options now all work.

	* Wedged in all of the mechanize parse Factory refactoring.

	* Refactored a bit to use Factory() amalgamation.  In particular,