@@ -1,3 +1,7 @@
+2006-03-15  Titus Brown  <t@issola.caltech.edu>
+
+	* Added installation instructions.
+
 2006-03-14  Titus Brown  <t@issola.caltech.edu>
 
 	* Added list of known problems.
@@ -12,7 +16,7 @@
 2006-03-06  Titus Brown  <t@issola.caltech.edu>
 
 	* fixed twill.shell.main() so that -i flag makes interact run
-	  even on failure exit.
+	  even on failure exit.  (Kieran Holland)
 
 	* Added setuptools entry_points magic for twill-sh script.
 
